<resources>
    <string name="app_name">Android Project</string>

    <!-- android:text -->
    <string name="t_expenseIncomeTextView">Add Expense/Income</string>
    <string name="t_recurringExpenseIncomeTextView">Add Recurring Expense/Income</string>

    <string name="t_expenseIncomeLabelTextView">Add Expense/Income</string>
    <string name="t_expenseIncomeDescriptionTextView">Description:</string>
    <string name="t_expenseIncomeAmountTextView">Amount:</string>
    <string name="t_expenseIncomeIsExpenseSwitch">Type: </string>
    <string name="t_expenseIncomeDateTextView">Date:</string>
    <string name="t_expenseIncomeIsExpenseTextView">Expense</string>
    <string name="t_expenseIncomeIsRecurringSwitch">Is Recurring: </string>
    <string name="t_expenseIncomeIsRecurringTextView">False</string>
    <string name="t_balanceTextView">Balance on: </string>

    <!-- android:contentDescription -->
    <string name="cd_floatingActionButton">Floating Action Button Menu</string>
    <string name="cd_expenseIncomeFloatingActionButton">Add Expense/Income Floating Action Button</string>
    <string name="cd_recurringExpenseIncomeFloatingActionButton">Add Recurring Expense/Income Floating Action Button</string>
    <string name="t_expenseIncomePeriodTextView">Interval:</string>
    <string name="t_registerLoginLabelTextView">Login/Register to Continue:</string>
    <string name="t_registerLoginUsernameTextView">Username:</string>
    <string name="h_registerLoginUsernameEditText">(6 – 32 Characters)</string>
    <string name="t_registerLoginPasswordTextView">Password:</string>
    <string name="h_registerLoginPasswordEditText">(6 – 32 Characters)</string>
    <string name="t_registerLoginLoginButton">Login</string>
    <string name="t_registerLoginRegisterButton">Register</string>
    <string name="t_registerLoginPleaseWaitTextView">!PLEASE WAIT!</string>

    <string-array name="intervals">
        <item>Every Day</item> <!-- 0 -->
        <item>Every Week</item> <!-- 1 -->
        <item>Every 2 Weeks</item> <!-- 2 -->
        <item>Every 3 Weeks</item> <!-- 3 -->
        <item>Every 4 Weeks</item> <!-- 4 -->
        <item>Every Month</item> <!-- 5 -->
        <item>Every 2 Months</item> <!-- 6 -->
        <item>Every 3 Months</item> <!-- 7 -->
        <item>Every 6 Months</item> <!-- 8 -->
        <item>Every Year</item> <!-- 9 -->
    </string-array>

</resources>